objects/ASI_GnH_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GnH_Actual_Amount_per_Recipient__c</fullName>
        <label>Actual Amount per Recipient</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Amount_per_Recipient__c</fullName>
        <label>Amount per Recipient</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>G_H_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Benefit_Date__c</fullName>
        <label>Benefit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Company__c</fullName>
        <formula>ASI_GnH_Applicant__r.CompanyName</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the Gift or Hospitality is given within one month prior to or after the completion of a competitive bid, tender exercise, or contract negotiation with the person that is receiving the Gift or Hospitality.</inlineHelpText>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Department__c</fullName>
        <formula>If(RecordType.Name  = &quot;ASI GnH KR Offer Request&quot; || 
RecordType.Name = &quot;ASI GnH KR Offer Request Read-Only&quot; || 
RecordType.Name = &quot;ASI GnH KR Receive Request&quot; || 
RecordType.Name = &quot;ASI GnH KR Receive Request Read-Only&quot;,
ASI_GnH_Applicant__r.ASI_GnH_Department__c,
ASI_GnH_Applicant__r.ASI_Department__c)</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Disposal_Action__c</fullName>
        <label>Disposal Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Disposal_Date__c</fullName>
        <label>Disposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Help_Text__c</fullName>
        <defaultValue>&quot;Applicant)&quot;&amp;BR()&amp;
&quot; 1) 본인 신청 - 별도 지정 필요 없음&quot;&amp;BR()&amp;
&quot; 2) 대리 신청 - 신청인명 찾기(돋보기 아이콘 표시)하여 신청자 지정&quot;&amp;BR()&amp;
&quot;Amount per Recipient)&quot;&amp;BR()&amp;
&quot; 참석인 1인당 제공 금액&quot;&amp;BR()&amp;
&quot;PAX)&quot;&amp;BR()&amp;
&quot; 신청자가 해당 행사에 참석하는 경우 -  신청자 포함한 참석인 수&quot;</defaultValue>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Nature_of_Report__c</fullName>
        <label>Nature of Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-approval</fullName>
                </value>
                <value>
                    <fullName>Post-approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Offeror_Organization__c</fullName>
        <formula>ASI_GnH_Offeror__r.ASI_GnH_Organization__c</formula>
        <label>Offeror Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Offeror_Title__c</fullName>
        <formula>ASI_GnH_Offeror__r.ASI_GnH_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offeror Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Offeror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offeror</label>
        <referenceTo>ASI_GnH_Recipient_Master__c</referenceTo>
        <relationshipLabel>G&amp;H Requests - Receive</relationshipLabel>
        <relationshipName>GnH_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_PAX__c</fullName>
        <label>PAX</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GnH_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Purpose__c</fullName>
        <label>Business Purpose and Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Recipient_Type__c</fullName>
        <inlineHelpText>“Public Officials” includes notably any person acting in an official capacity for or on behalf of (a) any public authority including foreign, legislative, administrative or judicial, or (b) a government-owned or controlled organization.</inlineHelpText>
        <label>External Party is</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Official</fullName>
                </value>
                <value>
                    <fullName>Non Public Official</fullName>
                </value>
                <value>
                    <fullName>Public Official &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Recipient_or_Offeror__c</fullName>
        <label>You Are</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipient</fullName>
                </value>
                <value>
                    <fullName>Offeror</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>G_H_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>G_H_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>G_H_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Total_Request_Amount__c</fullName>
        <formula>ASI_GnH_PAX__c * ASI_GnH_Amount_per_Recipient__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Type__c</fullName>
        <inlineHelpText>“Gift” means anything that is given or received in connection with the Company business, including cash, food and invitations. “Hospitality” means all social entertainment and/or hosting in connection with the Company&apos;s business.</inlineHelpText>
        <label>G&amp;H Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>G&amp;H Request</label>
    <listViews>
        <fullName>ASI_GnH_KR_All_GnH_Request_Offer</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>ASI_GnH_Nature_of_Report__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_KR_Offer_Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_KR_Offer_Request_Read_Only</value>
        </filters>
        <label>All KR G&amp;H Request - Offer</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_KR_All_GnH_Request_Receive</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>ASI_GnH_Nature_of_Report__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_KR_Receive_Request,ASI_GnH_Request__c.ASI_GnH_KR_Receive_Request_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_KR_Receive_Request_Read_Only</value>
        </filters>
        <label>All KR G&amp;H Request - Receive</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_KR_My_GnH_Request</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>ASI_GnH_Nature_of_Report__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_KR_Receive_Request,ASI_GnH_Request__c.ASI_GnH_KR_Receive_Request_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_KR_Offer_Request,ASI_GnH_Request__c.ASI_GnH_KR_Offer_Request_Read_Only</value>
        </filters>
        <label>My KR G&amp;H Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_TW_All_GnH_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Recipient_or_Offeror__c</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_TW_Request,ASI_GnH_Request__c.ASI_GnH_TW_Request_Read_Only</value>
        </filters>
        <label>All TW G&amp;H Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_TW_All_GnH_Request_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Actual_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_TW_Request,ASI_GnH_Request__c.ASI_GnH_TW_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_GnH_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All TW G&amp;H Request Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_Compliance_Officer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_TW_All_GnH_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_TW_Request,ASI_GnH_Request__c.ASI_GnH_TW_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_GnH_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All TW G&amp;H Request-Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_GnH_TW_My_GnH_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Status__c</columns>
        <columns>ASI_GnH_Applicant__c</columns>
        <columns>ASI_GnH_Type__c</columns>
        <columns>ASI_GnH_Recipient_Type__c</columns>
        <columns>ASI_GnH_Benefit_Date__c</columns>
        <columns>ASI_GnH_PAX__c</columns>
        <columns>ASI_GnH_Amount_per_Recipient__c</columns>
        <columns>ASI_GnH_Purpose__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Request__c.ASI_GnH_TW_Request,ASI_GnH_Request__c.ASI_GnH_TW_Request_Read_Only</value>
        </filters>
        <label>My TW G&amp;H Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GH-{yy}-{00000}</displayFormat>
        <label>G&amp;H Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G&amp;H Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_Offer_Request</fullName>
        <active>true</active>
        <description>PR Korea G&amp;H Offer Form</description>
        <label>ASI GnH KR Offer Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_KR_Offer_Request_Read_Only</fullName>
        <active>true</active>
        <description>PR Korea Offer Form (Read-Only)</description>
        <label>ASI GnH KR Offer Request Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_KR_Receive_Request</fullName>
        <active>true</active>
        <description>PR Korea G&amp;H Receive Form</description>
        <label>ASI GnH KR Receive Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_KR_Receive_Request_Read_Only</fullName>
        <active>true</active>
        <description>PR Korea G&amp;H Receive Form (Read-Only)</description>
        <label>ASI GnH KR Receive Request Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_TW_Request</fullName>
        <active>true</active>
        <label>ASI GnH TW Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_TW_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI GnH TW Request Read-Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_GnH_Share_with_Approvers__c</fullName>
        <label>Share with Approvers</label>
    </sharingReasons>
</CustomObject>